src/objects/graxopportunityindex__x/fields/grax_contact_xf__c.field-meta.xml
<CustomField>
    <fullName>grax_contact_xf__c</fullName>
    <description>grax_contact_xf</description>
    <externalDeveloperName>grax_contact_xf</externalDeveloperName>
    <label>grax_contact_xf</label>
    <length>128</length>
    <type>Text</type>
</CustomField>