src/objects/graxopportunityindex__x/fields/grax_CreatedBy_Name__c.field-meta.xml
<CustomField>
    <fullName>grax_CreatedBy_Name__c</fullName>
    <description>grax_CreatedBy_Name</description>
    <externalDeveloperName>grax_CreatedBy_Name</externalDeveloperName>
    <label>grax_CreatedBy_Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>