src/objects/graxopportunityindex__x/fields/grax_createdbyid_name__c.field-meta.xml
<CustomField>
    <fullName>grax_createdbyid_name__c</fullName>
    <description>grax_createdbyid_name</description>
    <externalDeveloperName>grax_createdbyid_name</externalDeveloperName>
    <label>grax_createdbyid_name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>