src/objects/graxopportunityindex__x/fields/grax_Duplicate_Design_Registration_r_Nam__c.field-meta.xml
<CustomField>
    <fullName>grax_Duplicate_Design_Registration_r_Nam__c</fullName>
    <description>grax_Duplicate_Design_Registration__r_Name</description>
    <externalDeveloperName>grax_Duplicate_Design_Registration__r_Name</externalDeveloperName>
    <label>grax_Duplicate_Design_Registration__r_Na</label>
    <length>128</length>
    <type>Text</type>
</CustomField>