src/objects/graxopportunityindex__x/fields/grax_end_customer_lookup_c_name__c.field-meta.xml
<CustomField>
    <fullName>grax_end_customer_lookup_c_name__c</fullName>
    <description>grax_end_customer_lookup__c_name</description>
    <externalDeveloperName>grax_end_customer_lookup__c_name</externalDeveloperName>
    <label>grax_end_customer_lookup__c_name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>