src/objects/graxopportunityindex__x/fields/grax_End_Customer_Lookup_r_Name__c.field-meta.xml
<CustomField>
    <fullName>grax_End_Customer_Lookup_r_Name__c</fullName>
    <description>grax_End_Customer_Lookup__r_Name</description>
    <externalDeveloperName>grax_End_Customer_Lookup__r_Name</externalDeveloperName>
    <label>grax_End_Customer_Lookup__r_Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>