src/objects/graxopportunityindex__x/fields/GRAX_Execution_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>GRAX_Execution_Unique_Key__c</fullName>
    <description>GRAX_Execution_Unique_Key</description>
    <externalDeveloperName>GRAX_Execution_Unique_Key</externalDeveloperName>
    <label>GRAX_Execution_Unique_Key</label>
    <length>128</length>
    <type>Text</type>
</CustomField>