src/objects/graxopportunityindex__x/fields/GRAX_Execution_Unique_Keys__c.field-meta.xml
<CustomField>
    <fullName>GRAX_Execution_Unique_Keys__c</fullName>
    <description>GRAX_Execution_Unique_Keys</description>
    <externalDeveloperName>GRAX_Execution_Unique_Keys</externalDeveloperName>
    <label>GRAX_Execution_Unique_Keys</label>
    <length>128</length>
    <type>Text</type>
</CustomField>