src/objects/graxopportunityindex__x/fields/grax_Global_Account_Manager_GAM_r_Name__c.field-meta.xml
<CustomField>
    <fullName>grax_Global_Account_Manager_GAM_r_Name__c</fullName>
    <description>grax_Global_Account_Manager_GAM__r_Name</description>
    <externalDeveloperName>grax_Global_Account_Manager_GAM__r_Name</externalDeveloperName>
    <label>grax_Global_Account_Manager_GAM__r_Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>