src/objects/graxopportunityindex__x/fields/grax_recordtype_xf__c.field-meta.xml
<CustomField>
    <fullName>grax_recordtype_xf__c</fullName>
    <description>grax_recordtype_xf</description>
    <externalDeveloperName>grax_recordtype_xf</externalDeveloperName>
    <label>grax_recordtype_xf</label>
    <length>128</length>
    <type>Text</type>
</CustomField>