src/objects/graxopportunityindex__x/fields/grax_Sales_Channel_r_Name__c.field-meta.xml
<CustomField>
    <fullName>grax_Sales_Channel_r_Name__c</fullName>
    <description>grax_Sales_Channel__r_Name</description>
    <externalDeveloperName>grax_Sales_Channel__r_Name</externalDeveloperName>
    <label>grax_Sales_Channel__r_Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>