src/objects/graxopportunityindex__x/fields/grax_SyncedQuote_Name__c.field-meta.xml
<CustomField>
    <fullName>grax_SyncedQuote_Name__c</fullName>
    <description>grax_SyncedQuote_Name</description>
    <externalDeveloperName>grax_SyncedQuote_Name</externalDeveloperName>
    <label>grax_SyncedQuote_Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>