src/objects/graxopportunityindex__x/fields/grax_tnw_mage_basic_magento_website_c_na__c.field-meta.xml
<CustomField>
    <fullName>grax_tnw_mage_basic_magento_website_c_na__c</fullName>
    <description>grax_tnw_mage_basic__magento_website__c_name</description>
    <externalDeveloperName>grax_tnw_mage_basic__magento_website__c_name</externalDeveloperName>
    <label>grax_tnw_mage_basic__magento_website__c_</label>
    <length>128</length>
    <type>Text</type>
</CustomField>