src/objects/graxopportunityindex__x/fields/Grax_Universal_c__c.field-meta.xml
<CustomField>
    <fullName>Grax_Universal_c__c</fullName>
    <description>Grax_Universal__c</description>
    <externalDeveloperName>GRAX_Universal__c</externalDeveloperName>
    <label>Grax_Universal__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>