src/objects/graxopportunityindex__x/fields/grax_user_xf__c.field-meta.xml
<CustomField>
    <fullName>grax_user_xf__c</fullName>
    <description>grax_user_xf</description>
    <externalDeveloperName>grax_user_xf</externalDeveloperName>
    <label>grax_user_xf</label>
    <length>128</length>
    <type>Text</type>
</CustomField>