src/objects/graxopportunityindex__x/fields/GRAX_Version__c.field-meta.xml
<CustomField>
    <fullName>GRAX_Version__c</fullName>
    <description>GRAX_Version</description>
    <externalDeveloperName>GRAX_Version</externalDeveloperName>
    <label>GRAX_Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>