src/objects/graxopportunityindex__x/fields/GRAXCompanyName__c.field-meta.xml
<CustomField>
    <fullName>GRAXCompanyName__c</fullName>
    <description>GRAXCompanyName</description>
    <externalDeveloperName>GRAXCompanyName</externalDeveloperName>
    <label>GRAXCompanyName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>