src/objects/graxopportunityindex__x/fields/graxid__c.field-meta.xml
<CustomField>
    <fullName>graxid__c</fullName>
    <description>graxid</description>
    <externalDeveloperName>graxid</externalDeveloperName>
    <label>graxid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>