src/objects/graxopportunityindex__x/fields/graxModifiedTime__c.field-meta.xml
<CustomField>
    <fullName>graxModifiedTime__c</fullName>
    <description>graxModifiedTime</description>
    <externalDeveloperName>graxModifiedTime</externalDeveloperName>
    <label>graxModifiedTime</label>
    <type>DateTime</type>
</CustomField>