src/objects/graxopportunityindex__x/fields/graxorgid__c.field-meta.xml
<CustomField>
    <fullName>graxorgid__c</fullName>
    <description>graxorgid</description>
    <externalDeveloperName>graxorgid</externalDeveloperName>
    <label>graxorgid</label>
    <length>128</length>
    <type>Text</type>
</CustomField>