src/objects/graxopportunityindex__x/fields/Growth_c__c.field-meta.xml
<CustomField>
    <fullName>Growth_c__c</fullName>
    <description>Growth__c</description>
    <externalDeveloperName>Growth__c</externalDeveloperName>
    <label>Growth__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>