src/objects/graxopportunityindex__x/fields/HasOpenActivity__c.field-meta.xml
<CustomField>
    <fullName>HasOpenActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HasOpenActivity</description>
    <externalDeveloperName>HasOpenActivity</externalDeveloperName>
    <label>HasOpenActivity</label>
    <type>Checkbox</type>
</CustomField>