src/objects/graxopportunityindex__x/fields/HasOpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>HasOpportunityLineItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HasOpportunityLineItem</description>
    <externalDeveloperName>HasOpportunityLineItem</externalDeveloperName>
    <label>HasOpportunityLineItem</label>
    <type>Checkbox</type>
</CustomField>