src/objects/graxopportunityindex__x/fields/HasOverdueTask__c.field-meta.xml
<CustomField>
    <fullName>HasOverdueTask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HasOverdueTask</description>
    <externalDeveloperName>HasOverdueTask</externalDeveloperName>
    <label>HasOverdueTask</label>
    <type>Checkbox</type>
</CustomField>