src/objects/graxopportunityindex__x/fields/Highlight_for_Review_c__c.field-meta.xml
<CustomField>
    <fullName>Highlight_for_Review_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Highlight_for_Review__c</description>
    <externalDeveloperName>Highlight_for_Review__c</externalDeveloperName>
    <label>Highlight_for_Review__c</label>
    <type>Checkbox</type>
</CustomField>