src/objects/graxopportunityindex__x/fields/II_VI_Market_c__c.field-meta.xml
<CustomField>
    <fullName>II_VI_Market_c__c</fullName>
    <description>II_VI_Market__c</description>
    <externalDeveloperName>II_VI_Market__c</externalDeveloperName>
    <label>II_VI_Market__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>