src/objects/graxopportunityindex__x/fields/IncoTerms_c__c.field-meta.xml
<CustomField>
    <fullName>IncoTerms_c__c</fullName>
    <description>IncoTerms__c</description>
    <externalDeveloperName>IncoTerms__c</externalDeveloperName>
    <label>IncoTerms__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>