src/objects/graxopportunityindex__x/fields/Internal_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments_c__c</fullName>
    <description>Internal_Comments__c</description>
    <externalDeveloperName>Internal_Comments__c</externalDeveloperName>
    <label>Internal_Comments__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>