src/objects/graxopportunityindex__x/fields/International_Carrier_c__c.field-meta.xml
<CustomField>
    <fullName>International_Carrier_c__c</fullName>
    <description>International_Carrier__c</description>
    <externalDeveloperName>International_Carrier__c</externalDeveloperName>
    <label>International_Carrier__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>