src/objects/graxopportunityindex__x/fields/Investment_c__c.field-meta.xml
<CustomField>
    <fullName>Investment_c__c</fullName>
    <description>Investment__c</description>
    <externalDeveloperName>Investment__c</externalDeveloperName>
    <label>Investment__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>