src/objects/graxopportunityindex__x/fields/invoiceit_crmx_Billing_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>invoiceit_crmx_Billing_Contact_c__c</fullName>
    <description>invoiceit_crmx__Billing_Contact__c</description>
    <externalDeveloperName>invoiceit_crmx__Billing_Contact__c</externalDeveloperName>
    <label>invoiceit_crmx__Billing_Contact__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>