src/objects/graxopportunityindex__x/fields/invoiceit_crmx_Create_Order_c__c.field-meta.xml
<CustomField>
    <fullName>invoiceit_crmx_Create_Order_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>invoiceit_crmx__Create_Order__c</description>
    <externalDeveloperName>invoiceit_crmx__Create_Order__c</externalDeveloperName>
    <label>invoiceit_crmx__Create_Order__c</label>
    <type>Checkbox</type>
</CustomField>