src/objects/graxopportunityindex__x/fields/invoiceit_crmx_Do_Not_Create_Automatic_O__c.field-meta.xml
<CustomField>
    <fullName>invoiceit_crmx_Do_Not_Create_Automatic_O__c</fullName>
    <defaultValue>false</defaultValue>
    <description>invoiceit_crmx__Do_Not_Create_Automatic_Order__c</description>
    <externalDeveloperName>invoiceit_crmx__Do_Not_Create_Automatic_Order__c</externalDeveloperName>
    <label>invoiceit_crmx__Do_Not_Create_Automatic_</label>
    <type>Checkbox</type>
</CustomField>