src/objects/graxopportunityindex__x/fields/invoiceit_crmx_Net_Total_c__c.field-meta.xml
<CustomField>
    <fullName>invoiceit_crmx_Net_Total_c__c</fullName>
    <description>invoiceit_crmx__Net_Total__c</description>
    <externalDeveloperName>invoiceit_crmx__Net_Total__c</externalDeveloperName>
    <label>invoiceit_crmx__Net_Total__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>