src/objects/graxopportunityindex__x/fields/invoiceit_crmx_Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>invoiceit_crmx_Start_Date_c__c</fullName>
    <description>invoiceit_crmx__Start_Date__c</description>
    <externalDeveloperName>invoiceit_crmx__Start_Date__c</externalDeveloperName>
    <label>invoiceit_crmx__Start_Date__c</label>
    <type>Date</type>
</CustomField>