src/objects/graxopportunityindex__x/fields/Is_tooling_addressed_c__c.field-meta.xml
<CustomField>
    <fullName>Is_tooling_addressed_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is_tooling_addressed__c</description>
    <externalDeveloperName>Is_tooling_addressed__c</externalDeveloperName>
    <label>Is_tooling_addressed__c</label>
    <type>Checkbox</type>
</CustomField>