src/objects/graxopportunityindex__x/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsDeleted</description>
    <externalDeveloperName>IsDeleted</externalDeveloperName>
    <label>IsDeleted</label>
    <type>Checkbox</type>
</CustomField>