src/objects/graxopportunityindex__x/fields/IsExcludedFromTerritory2Filter__c.field-meta.xml
<CustomField>
    <fullName>IsExcludedFromTerritory2Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsExcludedFromTerritory2Filter</description>
    <externalDeveloperName>IsExcludedFromTerritory2Filter</externalDeveloperName>
    <label>IsExcludedFromTerritory2Filter</label>
    <type>Checkbox</type>
</CustomField>