src/objects/graxopportunityindex__x/fields/IsPrivate__c.field-meta.xml
<CustomField>
    <fullName>IsPrivate__c</fullName>
    <description>IsPrivate</description>
    <externalDeveloperName>IsPrivate</externalDeveloperName>
    <label>IsPrivate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>