src/objects/graxopportunityindex__x/fields/IsWon__c.field-meta.xml
<CustomField>
    <fullName>IsWon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsWon</description>
    <externalDeveloperName>IsWon</externalDeveloperName>
    <label>IsWon</label>
    <type>Checkbox</type>
</CustomField>