src/objects/graxopportunityindex__x/fields/ITAR_c__c.field-meta.xml
<CustomField>
    <fullName>ITAR_c__c</fullName>
    <description>ITAR__c</description>
    <externalDeveloperName>ITAR__c</externalDeveloperName>
    <label>ITAR__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>