src/objects/graxopportunityindex__x/fields/Key_Opportunity_c__c.field-meta.xml
<CustomField>
    <fullName>Key_Opportunity_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Key_Opportunity__c</description>
    <externalDeveloperName>Key_Opportunity__c</externalDeveloperName>
    <label>Key_Opportunity__c</label>
    <type>Checkbox</type>
</CustomField>