src/objects/graxopportunityindex__x/fields/Last_Activity_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_c__c</fullName>
    <description>Last_Activity_Date__c</description>
    <externalDeveloperName>Last_Activity_Date__c</externalDeveloperName>
    <label>Last_Activity_Date__c</label>
    <type>Date</type>
</CustomField>