src/objects/graxopportunityindex__x/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <description>LastActivityDate</description>
    <externalDeveloperName>LastActivityDate</externalDeveloperName>
    <label>LastActivityDate</label>
    <type>DateTime</type>
</CustomField>