src/objects/graxopportunityindex__x/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <description>LastModifiedById</description>
    <externalDeveloperName>LastModifiedById</externalDeveloperName>
    <label>LastModifiedById</label>
    <length>128</length>
    <type>Text</type>
</CustomField>