src/objects/graxopportunityindex__x/fields/LastModifiedById_grax_xf_user__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById_grax_xf_user__c</fullName>
    <description>LastModifiedById_grax_xf_user</description>
    <externalDeveloperName>LastModifiedById_grax_xf_user</externalDeveloperName>
    <label>LastModifiedById_grax_xf_user</label>
    <length>128</length>
    <type>Text</type>
</CustomField>