src/objects/graxopportunityindex__x/fields/LastReferencedDate__c.field-meta.xml
<CustomField>
    <fullName>LastReferencedDate__c</fullName>
    <description>LastReferencedDate</description>
    <externalDeveloperName>LastReferencedDate</externalDeveloperName>
    <label>LastReferencedDate</label>
    <type>DateTime</type>
</CustomField>