src/objects/graxopportunityindex__x/fields/LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>LastViewedDate__c</fullName>
    <description>LastViewedDate</description>
    <externalDeveloperName>LastViewedDate</externalDeveloperName>
    <label>LastViewedDate</label>
    <type>DateTime</type>
</CustomField>