src/objects/graxopportunityindex__x/fields/Lead_Source_c__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_c__c</fullName>
    <description>Lead_Source__c</description>
    <externalDeveloperName>Lead_Source__c</externalDeveloperName>
    <label>Lead_Source__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>