src/objects/graxopportunityindex__x/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <description>LeadSource</description>
    <externalDeveloperName>LeadSource</externalDeveloperName>
    <label>LeadSource</label>
    <length>128</length>
    <type>Text</type>
</CustomField>