src/objects/graxopportunityindex__x/fields/Legacy_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID_c__c</fullName>
    <description>Legacy_ID__c</description>
    <externalDeveloperName>Legacy_ID__c</externalDeveloperName>
    <label>Legacy_ID__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>